# cookiecutter-gurobi-poetry

./: README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: cli.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/models/: base.py
