[tool.poetry]
name = "cookiecutter-gurobi-poetry"
version = "0.1.0"
description = 'An "opinionated" cookiecutter for creating optimisation projects in Python with Gurobi and Poetry.'
authors = ["Riley Clement <venaturum@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["cookiecutter", "poetry", "gurobi", "template", "package"]
repository = "https://github.com/venaturum/cookiecutter-gurobi-poetry"

classifiers = [
    "Operating System :: OS Independent",
	"Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/venaturum/cookiecutter-gurobi-poetry/issues"

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^1.7"

[tool.poetry.dev-dependencies]
isort = ">=5.8"
black = {version = "*", python = "^3.6.2"}
flake8 = ">=3.9"
pre-commit = {version = ">=2.13", python = "^3.6.1"}

[tool.black]
exclude="{{cookiecutter.project_slug}}"

[tool.isort]
# make it compatible with black
profile = "black"
multi_line_output = 3
#src_paths = ["staircase", "tests"]
exclude="{{cookiecutter.project_slug}}"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"