[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.short_description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
{%- set license_classifiers = {
    "MIT license": "MIT",
    "Apache Software License 2.0": "Apache-2.0",
    "GNU General Public License v3.0": "GPL-3.0-only",
    "GNU General Public License v2.0": "GPL-2.0-only",
    "BSD 3-Clause 'New' or 'Revised' License": "BSD-3-Clause",
    "GNU Lesser General Public License v2.1": "LGPL-2.1-only",
    "BSD 2-Clause 'Simplified' License": "BSD-2-Clause",
} -%}
{%- if cookiecutter.open_source_license in license_classifiers %}
license = "{{ license_classifiers[cookiecutter.open_source_license] }}"
{%- endif %}
readme = "README.md"
keywords = ["python", "gurobi", "{{ cookiecutter.project_slug }}"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
gurobipy = "^9.5.1"
numpy = "^1"
scipy = "^1"
{%- if cookiecutter.use_gurobipy_exceptions == "y" %}
gurobipy_exceptions = {git = "https://github.com/venaturum/gurobipy_exceptions.git", rev = "main"}
{%- endif %}
{%- if cookiecutter.use_pandas == "y" %}
pandas = "^1"
{%- endif %}
{%- if cookiecutter.use_matplotlib == "y" %}
matplotlib = "^3.5"
{%- endif %}
{%- if cookiecutter.use_seaborn == "y" %}
seaborn = "^0.11"
{%- endif %}

[tool.poetry.dev-dependencies]
{%- if cookiecutter.use_notebooks == "y" %}
ipykernel = "^5"
{%- endif %}
{%- if cookiecutter.use_isort == "y" %}
isort = ">=5.8"
{%- endif %}
{%- if cookiecutter.use_black == "y" %}
black = ">=22"
{%- endif %}
{%- if cookiecutter.use_flake8 == "y" %}
flake8 = ">=3.9"
{%- endif %}
{%- if cookiecutter.use_precommit == "y" %}
pre-commit = ">=2.13.0"
{%- endif %}
{%- if (cookiecutter.use_black == "y") and (cookiecutter.use_isort == "y") %}

[tool.isort]
# make it compatible with black
profile = "black"
multi_line_output = 3
src_paths = ["."]
{%- endif %}
{%- if 'none' not in cookiecutter.command_line_interface|lower %}

[tool.poetry.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.cli:main"
{%- endif %}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"